Feature/p002271 6621 exim workspaces and menus (#4)
* feat: eximworkspaces and menus

* feat: full test coverage

* feat: fixed log and log coverage

* fix: sonar issues

* revert: boolean check simplified
